--- a/my-portfolio/src/styles/hero.css
+++ b/my-portfolio/src/styles/hero.css
@@ -11,42 +11,32 @@
     padding: 2rem;
   } */
 /* hero.css */
+/* hero.css */
 .hero {
-    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #eed7c5; /* Light background color */
     text-align: center;
     padding: 2rem;
-    overflow: hidden;
-  }
-  
-  .hero::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text x="10" y="10" font-size="125" fill="%2383a69b">☾𖤓</text></svg>');
-    background-size: 50px 50px;
-    opacity: 0.2;
-    pointer-events: none;
+    background-image: url('/VN.jpg'); /* Path to your PNG */
+    background-size: cover; /* Ensure the image covers the entire section */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Prevent the image from repeating */
+    color: #090707; /* Light text color for contrast */
   }
   
   .hero h1 {
-    font-size: 3rem;
-    color: #3d405b; /* Dark color for the name */
-    margin-bottom: 0.5rem;
+    font-family: Quattrocento, sans-serif;
+    font-weight: 300;
+     margin: 0;
   }
   
   .hero h3 {
     font-size: 1.5rem;
-    color: #666; /* Gray color for the title */
     font-weight: 400;
+    font-family: 'Quattrocento Sans', sans-serif; 
   }
 
 .logo-container {
