--- a/my-portfolio/src/styles/App.css
+++ b/my-portfolio/src/styles/App.css
@@ -9,7 +9,6 @@
 .container {
   display: flex;
   min-height: 100vh;
-  background-color: #006d77;
 }
 
 /* Left Side: Fixed Image */
@@ -18,6 +17,7 @@
   position: fixed;
   height: 100vh;
   overflow: hidden;
+  transition: background-color 0.5s ease;
 }
 
 .fixed-image {
@@ -50,4 +50,27 @@
 
 .Loop::-webkit-scrollbar {
   display: none; /* Chrome, Safari, and Edge */
+}
+
+
+/* Default style for inactive sections */
+.inactive-section {
+  background: #aaa;
+  display: flex;
+  flex-direction: column;
+  opacity: 0.2;
+  position: relative;
+}
+
+/* Style for the active section */
+.active-section {
+  background: white; 
+  opacity: 1;
+  transition-duration: 0.5s;
+}
+
+h1, h2, h3 {
+  font-family: Quattrocento, sans-serif;
+  font-weight: 300;
+  margin: 0;
 }
